--- a/sample/day1/index.html
+++ b/sample/day1/index.html
@@ -66,23 +66,24 @@
           <h4 class="paragraph-title">1.2 기본 타입</h4>
           <ul>
             <li><a href="dist/ch01/ex01-02.js">01-02 기본 타입</a></li>
-            <li><a href="dist/ch01/ex01-03.js">01-03 BigInt</a></li>
-            <li><a href="dist/ch01/ex01-04.js">01-04 Symbol</a></li>
+            <li><a href="dist/ch01/ex01-03.js">01-03 함수에 타입 지정</a></li>
+            <li><a href="dist/ch01/ex01-04.js">01-04 선택적 파라미터(optional parameter)</a></li>
+            <li><a href="dist/ch01/ex01-05.js">01-05 유니언 타입(union type)</a></li>
+            <li><a href="dist/ch01/ex01-05-01.js">01-05-01 유니언 타입과 타입 가드</a></li>
           </ul>
         </section>
         <section class="paragraph">
-          <h4 class="paragraph-title">1.3 참조 데이터 타입(Object)</h4>
+          <h4 class="paragraph-title">1.3 타입 별칭</h4>
           <ul>
-            <li><a href="dist/ch01/ex01-05.js">01-05 new Object() - 생성자 함수로 객체 생성</a></li>
-            <li><a href="dist/ch01/ex01-05-01.js">01-05-01 class에서 사용</a></li>
-            <li><a href="dist/ch01/ex01-06.js">01-06 JSON - 리터럴 방식으로 객체 생성</a></li>
-            <li><a href="dist/ch01/ex01-07.js">01-07 객체의 속성 관리</a></li>
+            <li><a href="dist/ch01/ex01-06.js">01-06 유니언 타입에 타입 별칭 지정</a></li>
+            <li><a href="dist/ch01/ex01-07.js">01-07 타입 별칭으로 객체의 타입 선언</a></li>
+            <li><a href="dist/ch01/ex01-08.js">01-08 인터섹션 타입(intersection type)</a></li>
           </ul>
         </section>
         <section class="paragraph">
-          <h4 class="paragraph-title">1.4 배열</h4>
+          <h4 class="paragraph-title">1.4 인터페이스</h4>
           <ul>
-            <li><a href="dist/ch01/ex01-08.js">01-08 배열 생성</a></li>
+
             <li><a href="dist/ch01/ex01-08-01.js">01-08-01 배열 생성</a></li>
             <li><a href="dist/ch01/ex01-08-02.js">01-08-02 배열 생성</a></li>
             <li><a href="dist/ch01/ex01-09.js">01-09 배열 메서드 push(), unshift(), pop(), shift()</a></li>
