--- a/sample/day2/index.html
+++ b/sample/day2/index.html
@@ -131,13 +131,11 @@
         <section class="paragraph">
           <h4 class="paragraph-title">2.3 제네릭</h4>
           <ul>
-            <li><a href="dist/ch02/ex02-07.js">02-07 제네릭 기본 문법</a></li>
-            <li><a href="dist/ch02/ex02-08.js">02-08 비슷한 함수를 여러개 만드는 경우</a></li>
-            <li><a href="dist/ch02/ex02-09.js">02-09 any 타입으로 하나의 함수로 만드는 경우</a></li>
-            <li><a href="dist/ch02/ex02-10.js">02-10 제네릭을 사용하는 경우</a></li>
-            <li><a href="dist/ch02/ex02-11.js">02-11 인터페이스에서 제네릭 사용</a></li>
-            <li><a href="dist/ch02/ex02-12.js">02-12 제네릭 타입 제약 - extends</a></li>
-            <li><a href="dist/ch02/ex02-13.js">02-13 제네릭 타입 제약 - keyof</a></li>
+            <li><a href="dist/ch02/ex02-07.js">02-07 TODO 완료 처리</a></li>
+            <li><a href="dist/ch02/ex02-08.js">02-08 TODO 완료 처리 - 제네릭</a></li>
+            <li><a href="dist/ch02/ex02-09.js">02-09 인터페이스에서 제네릭 사용</a></li>
+            <li><a href="dist/ch02/ex02-10.js">02-10 제네릭 타입 제약 - extends</a></li>
+            <li><a href="dist/ch02/ex02-11.js">02-11 제네릭 타입 제약 - keyof</a></li>
           </ul>
         </section>
       </section>
